# um-scraper

./: .gitignore  Cargo.toml  README.md
src/: config.rs  grade.rs  lib.rs  mail.rs  main.rs  note.rs
