[package]
name = "um-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
thirtyfour = "0.36.1"
lettre = "0.11.18"
tokio = { version = "1.47.1", features = ["full"] }
durations = "0.1.1"
humantime = "2.2.0"
log = "0.4.27"
env_logger = "0.11.8"

serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.34"
humantime-serde = "1.1.1"
pretty_env_logger = "0.5.0"
futures = "0.3.31"
